--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,6 @@
 		%sveltekit.head%
 	</head>
 	<body>
-		<div>%sveltekit.body%</div>
+		<div class="font-mono">%sveltekit.body%</div>
 	</body>
 </html>
