--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		/>
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="overflow-hidden">
 		<div class="font-mono">%sveltekit.body%</div>
 	</body>
 </html>
